--- a/themes/inhabitent/sass/_typography.scss
+++ b/themes/inhabitent/sass/_typography.scss
@@ -8,7 +8,9 @@ input,
 select,
 textarea {
 	color: $color__text-main;
-	font-family: $font__main;
+	font-family: $font_family-main,  $font__main;
+	font-weight: normal;
+	font-style: normal;
 	@include font-size(1);
 	line-height: $font__line-height-body;
 }
@@ -39,7 +41,7 @@ address {
 
 pre {
 	background: $color__background-pre;
-	font-family: $font__pre;
+	// font-family: $font__pre;
 	@include font-size(0.9375);
 	line-height: $font__line-height-pre;
 	margin-bottom: 1.6rem;
