--- a/themes/inhabitent/sass/_variables.scss
+++ b/themes/inhabitent/sass/_variables.scss
@@ -18,6 +18,16 @@ $color__border-abbr: #666;
 $color__link: royalblue;
 $color__link-visited: purple;
 $color__link-hover: midnightblue;
+$color_brand_nav: #248A83;
+$color_brand_outline: #d99054;
+$color_brand_hover: #2f1339;
+$color_brand_link: #f0e4d1;
+$color_brand_border: #a1a1a1;
+$color_brand_background: #808080;
+$color_general: #fff;
+
+
+
 
 // Typography
 
@@ -27,3 +37,4 @@ $font__pre: "Courier 10 Pitch", Courier, monospace;
 $font__line-height-body: 1.5;
 $font__line-height-pre: 1.6;
 $font_family-main: 'merriweather'; 
+$font_family-header: 'novecento';
