--- a/themes/inhabitent/sass/_content.scss
+++ b/themes/inhabitent/sass/_content.scss
@@ -32,6 +32,70 @@
 	margin: 0 0 $base__space-unit;
 }
 
+.site-content{
+    padding-top: 50px;
+    display: flex;
+	height: auto;
+}
+
+.content-area{
+    flex: 0 0 70%;
+}
+.site-main{
+    border-right: 1px solid $color_brand_border;
+    padding-top: 50px;
+}
+
+.format-standard{
+    padding: 0 50px 0 150px;
+}
+
+.wp-post-image{
+    width: 100%;
+    height: 100%;
+}
+
+.entry-header{
+    position: relative;
+    color: $color_general;
+    text-transform: uppercase;
+    font-family: $font_family-header, serif;
+    h2{
+        font-size: 2em;
+    }
+}
+
+.entry-title{
+    position: absolute;
+    padding: 30px;
+    width: 65%;
+    background-color: $color_brand_nav;
+    top: 0;
+
+
+    a, a:visited{
+        color: $color_general;
+        text-decoration: none;
+    }
+
+    a:hover{
+        color: $color_brand_link;
+    }
+
+}
+
+.entry-meta{
+    position: absolute;
+    background-color: $color_brand_nav;
+    bottom: 7px;
+    right: 0;
+    padding: 5px 15px;
+}
+
+
+
+
+
 /* Asides */
 
 .blog .format-aside .entry-title,
