--- a/themes/inhabitent/sass/_elements.scss
+++ b/themes/inhabitent/sass/_elements.scss
@@ -5,6 +5,8 @@
 html {
 	box-sizing: border-box;
 	@include font-size(1);
+	width: 100vw;
+	height: 100vh;
 }
 
 *,
@@ -15,8 +17,8 @@ html {
 
 body {
 	background: $color__background-body; /* Fallback for when there is no custom background color defined. */
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	height: 100%;
 }
 
 blockquote, q {
