--- a/themes/inhabitent/sass/_footer.scss
+++ b/themes/inhabitent/sass/_footer.scss
@@ -4,16 +4,54 @@
 
 .site-footer{
     background-image: url("../../images/dark-wood.png");
+    bottom:0;
     width: 100%;
-    height: 10%;
-}
+    height:45%;
+    display: flex;
+    justify-content: center;
+    color: #ffffff;
 
-// @media
-// (-webkit-min-device-pixel-ratio: 2),
-// (min-resolution: 192dpi) {
-//     .site-footer {
-//         background-image: url('../../images/dark-wood@2x.png');
-//         width: 1600px;
-//         height: 300px;
-//     }
-// }
+    .site-info{
+        width: 100%;
+        max-width:1120px;
+        display: flex;
+        flex-wrap: wrap;
+        padding: 40px;
+
+        .secondary {
+            flex: 0 0 50%;
+            display: flex;
+            flex-direction: row;
+
+            .footer-sidebar1{
+                flex: 0 0 50%;
+            } 
+            .footer-sidebar2{
+                flex: 0 0 50%;
+            }
+        }
+
+        .footer-logo{
+            flex: 0 0 50%;
+            display: flex;
+            justify-content: flex-end;
+            
+            .footer-inhabitent-logo{
+                padding: 10px;
+                width: 70%;
+                img{
+                    width: 70%;
+                }
+            }
+        }
+
+        .credit{
+            flex: 0 0 100%;
+            margin: 0 auto;
+            text-transform: uppercase;
+            font-family: $font_family-header, sans-serif;
+            text-align: center;
+            align-self: flex-end;
+        }
+    }
+}
