--- a/themes/inhabitent/sass/_navigation.scss
+++ b/themes/inhabitent/sass/_navigation.scss
@@ -5,15 +5,15 @@
 /* Links */
 
 a {
-	color: $color__link;
+	color: $color_brand_nav;
 
 	&:visited {
-		color: $color__link-visited;
+		color: $color_brand_nav;
 	}
 	&:hover,
 	&:focus,
 	&:active {
-		color: $color__link-hover;
+		color: $color_brand_hover;
 	}
 	&:focus {
 		outline: thin dotted;
