--- a/themes/inhabitent/sass/style.scss
+++ b/themes/inhabitent/sass/style.scss
@@ -63,6 +63,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "content";
 @import "media";
 @import "page-templates";
-
-
+@import "header";
 @import "footer";
+
+
