style shop page

--- a/themes/inhabitent/sass/_page-templates.scss
+++ b/themes/inhabitent/sass/_page-templates.scss
@@ -31,8 +31,6 @@
 }
 
 
-
-
 /* Sidebar */
 
 
@@ -61,3 +59,41 @@
     height: 100vh;
     top:0;
 }
+
+.product-archive-section{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    .product-list-entry {
+        flex: 0 0 25%;
+        padding: 15px;
+        
+        .entry-header{
+            height: 240px;
+            border: 1px solid $color_brand_border;
+            img{
+                object-fit: cover;
+            }
+        }
+        .product-name-price{
+            color: black;
+            border: 1px solid $color_brand_border;
+            margin: 0;
+            padding: 10px 20px;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            
+            .entry-title {
+                margin: 0;
+            }
+            .entry-price{
+                margin: 0;
+            }
+        }
+    }
+}
+
+p.product-name-price span:first-child:after {
+    content: leader(dotted)}
+
