--- a/themes/inhabitent/sass/_variables.scss
+++ b/themes/inhabitent/sass/_variables.scss
@@ -22,7 +22,7 @@ $color_brand_nav: #248A83;
 $color_brand_outline: #d99054;
 $color_brand_hover: #2f1339;
 $color_brand_link: #f0e4d1;
-$color_brand_border: #a1a1a1;
+$color_brand_border: #e1e1e1;
 $color_brand_background: #808080;
 $color_general: #fff;
 
