--- a/themes/inhabitent/sass/_content.scss
+++ b/themes/inhabitent/sass/_content.scss
@@ -73,24 +73,24 @@
     }
 }
 
-.entry-title{
+.post{
+
+    .entry-title{
     position: absolute;
     padding: 30px;
     width: 65%;
     background-color: $color_brand_nav;
     top: 0;
 
+        a, a:visited{
+            color: $color_general;
+            text-decoration: none;
+        }
 
-    a, a:visited{
-        color: $color_general;
-        text-decoration: none;
+        a:hover{
+            color: $color_brand_link;
+        }
     }
-
-    a:hover{
-        color: $color_brand_link;
-    }
-
-}
 
 .entry-meta{
     position: absolute;
@@ -100,9 +100,7 @@
     padding: 5px 15px;
 }
 
-
-
-
+}
 
 /* Asides */
 
