--- a/themes/inhabitent/sass/_variables.scss
+++ b/themes/inhabitent/sass/_variables.scss
@@ -38,3 +38,4 @@ $font__line-height-body: 1.5;
 $font__line-height-pre: 1.6;
 $font_family-main: 'merriweather'; 
 $font_family-header: 'novecento';
+$font_size-main: 16px;
