--- a/themes/inhabitent/sass/_page-templates.scss
+++ b/themes/inhabitent/sass/_page-templates.scss
@@ -48,6 +48,34 @@
 
 /* Shop */
 
+.shop-page-header{
+
+    margin-top: 5%;
+
+    .shop-page-title{
+        text-align: center;
+        text-transform: uppercase;
+        margin: 0;
+    }
+
+    .product-types{
+        display: flex;
+        list-style-type: none;
+        justify-content: center;
+        flex-direction: row;
+        width: 30%;
+        margin: 0 auto;
+        padding: 0;
+
+        .product-term-item{
+            margin: 0 20px;
+        }
+
+    }
+
+}
+
+
 .shop-content-area, .about-content{
     max-width: 1120px;
     width: 100%;
@@ -64,8 +92,10 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    padding: 10% 0;
     .product-list-entry {
         flex: 0 0 25%;
+        width: 25%;
         padding: 15px;
         
         .entry-header{
@@ -79,21 +109,19 @@
             color: black;
             border: 1px solid $color_brand_border;
             margin: 0;
-            padding: 10px 20px;
+            padding: 10px 12px;
             display: flex;
             flex-direction: row;
-            justify-content: space-between;
             
             .entry-title {
-                margin: 0;
+                white-space:nowrap;
+                overflow:hidden;
             }
-            .entry-price{
-                margin: 0;
+            .entry-title:after {
+                content: ' ....................................';
             }
         }
     }
 }
 
-p.product-name-price span:first-child:after {
-    content: leader(dotted)}
 
